--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,16 @@ task fatJar(type: Jar) {
 sourceCompatibility = 1.8
 
 repositories {
+    maven { url 'http://repo1.maven.org/maven2' }
     mavenCentral()
 }
 
 dependencies {
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
 }
 
